# SpaceHunter

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  gamestate.json  pyproject.toml  spacehunterconfig.json
.github/workflows/: main.yml
src/spacehunter/: __main__.py  _version.py  app.py  armoury.py  automaton.py  colors.py  communications.py  controllers.py  enemy.py  explosion.py  globals.py  helpers.py  levels.py  player.py  radar.py  spacejunk.py  supplyship.py  weapon.py  weapons.py
src/spacehunter/images/help/: help images.xcf
src/spacehunter/images/icons/: spacer.icns
src/spacehunter/sounds/: space_soundtrack.cpr
